fixes issues